# kpt-back

./: .env  Cargo.toml  kpt.sql
src/: database.rs  lib.rs  main.rs  request.rs
src/controllers/: accounts.rs  boards.rs  root.rs
src/entities/: account.rs  board.rs  ticket.rs
src/repos_impl/: accounts.rs  boards.rs  tickets.rs
src/repositories/: accounts.rs  boards.rs  mod.rs  tickets.rs
src/services/: accounts.rs  boards.rs  tickets.rs
