[package]
name = "kpt-back"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "macros", "chrono"] }
argon2 = "0.5"
async-session = "3"
tower-http = { version = "0.5", features = ["cors"] }
bb8 = "0.8"
bb8-postgres = "0.8"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
anyhow = "1.0.98"
async-sqlx-session = { version = "0.4", features = ["pg"] }